--- a/style.css
+++ b/style.css
@@ -1,44 +1,14 @@
-/* === if you find this source code helpul,Feel free to support our channel
+/* ===  This is just starter file for you, Watch full video tutorial on YouTube or get the source code
  on Buymecoffee page and get access to more login forms and web projects.
+ Thanks for your support!!.
 link below! 
-  https://buymeacoffee.com/mrsmartchoice === */
+  https://buymeacoffee.com/mrsmartchoice 
+  
+  Check out more design :https://dribbble.com/mrsmartchoice
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  LEarn MOre video Toturial: hptps://youtube.com/@mr-smartchoice
+  
+  My resource & Tips : https://boilink.com/mrsmartchoice  === */
 
 
 
